# libtorrent-reputation

./: .gitignore  AUTHORS  BUILDING  COPYING  Jamroot.jam  Makefile.am  README  configure.ac  libtorrent-reputation.pc.in
include/libtorrent/extensions/: lt_identify.hpp  reputation_export.hpp  reputation_manager.hpp
m4/: .gitignore
src/: lt_identify.cpp  reputation_manager.cpp  sha256.cpp  sha256.hpp
src/chacha20poly1305/: chacha.cpp  chacha.hpp  chacha20poly1305.cpp  chacha20poly1305.hpp  poly1305.cpp  poly1305.hpp
test/: Jamfile  main.cpp  test.hpp  test_reputation_extension.cpp
